2009-04-24  Nick Garnett  <nickg@ecoscentric.com>

	* include/hal_arch.h (GDB_Registers): Redefine for Book E
	processors which need a slightly different register vector layout
	and size.

	* include/ppc_stub.h (REGSIZE, NUMREGS): Add definitions for Book
	E processors.

2009-01-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/arch.inc: Incorporate changes of 2008-09-23 and 2007-10-12
	into hal_vectors_init.

2008-10-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/powerpc.ld (SECTION_data): Do not define _GLOBAL_OFFSET_TABLE_
	It is meant to be defined by the linker.

2008-10-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/powerpc.ld: Remove workaround from 2005-06-03 for LD bug,
	since fixed.
	Include .eh_frame_hdr in .eh_frame.

2008-09-23  Shaun Louie <sal@microplex.com>

	* src/vectors.S: Changed compile condition that determines whether
	exception vectors should be copied to RAM.

2008-07-23  Nick Garnett  <nickg@ecoscentric.com>

	* src/vectors.S: 
	* src/context.S: Modify invocation of hal_cpu_int_merge.

	* include/ppc_regs.h: Add full definitions of bits in TCR and TSR.

	* include/hal_intr.h: Define additional interval timer and
	watchdog interrupt vectors for Book E processors.
	Rewrite interrupt control macros to allow for multiple interrupt
	enable bits in MSR. Mainly for Book E, which has both external and
	critical interrupt control bits.

	* include/arch.inc: Rewrite interrupt control macros to allow for
	multiple interrupt enable bits in MSR. Mainly for Book E, which
	has both external and critical interrupt control bits.

	* src/hal_mk_defs.c (main): Add CYGNUM_HAL_VECTOR_FIT definition.

2008-07-04  Nick Garnett  <nickg@ecoscentric.com>

	* src/hal_misc.c (hal_enable_caches): Change ifdefs controlling
	cache invalidation and enable to permit a JTAG startup type.

	* src/vectors.S (cyg_hal_default_critical_exception_vsr): Fix typo
	in final branch destination.

2007-11-29  Nick Garnett  <nickg@ecoscentric.com>
